--- a/front-client/swiper/index/index.wxss
+++ b/front-client/swiper/index/index.wxss
@@ -270,8 +270,7 @@ page{
   text-align: center;
 }
 .upper{
-  padding-top: 30rpx;
-  padding-bottom: 26rpx;
+  padding-top: 100%;
   background: #dc6142;
   position: relative
 }
@@ -291,6 +290,13 @@ page{
   color: #fedeb2;
   padding: 0 60rpx;
   margin: 30rpx 0;
+  font-weight: 700;
+}
+.textxiexie {
+  font-size: 80rpx;
+  color: #fedeb2;
+  padding-top: 50%;
+  padding-left: 20%;
   font-weight: 700;
 }
 .textCN .icon{
