--- a/front-client/lvdi_project/pages/packetRain/index.wxml
+++ b/front-client/lvdi_project/pages/packetRain/index.wxml
@@ -1,8 +1,10 @@
-<!-- pages/packetRain/index.wxml -->
-<view class="container">
-  <!--<image mode="aspectFit" src="/assets/logo.png"></image>
-  <view class='title'>Sol Weapp</view>-->
-  <view>谢谢参与</view>
+<view class="page-body">
+    <view class="page-section page-section-spacing swiper">
+      <view class='imagesize'>
+        <image src="/assets/images/bj.jpg"/>
+        <view class="kind-list-text">谢谢参与！</view>
+      </view>
+  </view>
 </view>
 <!-- 红包雨组件 -->
 <s-packetrain visible="{{visible}}" total="{{total}}"
