--- a/front-client/lvdi_project/pages/packetRain/index.wxss
+++ b/front-client/lvdi_project/pages/packetRain/index.wxss
@@ -10,3 +10,40 @@
   font-size: 42px;
   font-weight: 400;
 }
+page {
+  background-color: #F8F8F8;
+  height: 100%;
+  font-size: 32rpx;
+  line-height: 1.6;
+}
+.page-body{
+  padding-top: 60rpx;
+  height: 100%;
+}
+.page-section{
+  width: 100%;
+  height: 90%;
+  margin-bottom: 60rpx;
+}
+.page-section-spacing{
+  box-sizing: border-box;
+  padding: 0 80rpx;
+}
+.kind-list-text {
+  display: block;
+  position: absolute;
+  font-size: 64rpx;
+  text-align: center;
+
+}
+.imagesize{
+ display:flex;
+ height: 100%;
+ width: 100%;
+ justify-content: center;
+ align-items:center;
+}
+.imagesize image { 
+  width:100%;
+  height:100%;
+}
